src/patternfly/layouts/Flex/flex.scss
// Always keep list of spacers and breakpoints up-to-date
$pf-v5-l-flex--breakpoint-map: build-breakpoint-map();
$pf-v5-l-flex--spacer-map: build-spacer-map();
$pf-v5-l-flex--gap-map: build-spacer-map("base", "none", "xs", "sm", "md", "lg", "xl", "2xl", "3xl", "4xl");
$pf-v5-l-flex--variable-map: build-variable-map("#{$pf-prefix}l-flex--spacer", $pf-v5-l-flex--spacer-map);

.#{$flex} {
  --#{$flex}--Display: flex;
  --#{$flex}--FlexWrap: wrap;
  --#{$flex}--AlignItems: baseline;
  --#{$flex}--m-row--AlignItems: baseline;
  --#{$flex}--m-row-reverse--AlignItems: baseline;
  --#{$flex}--item--Order: 0;
  --#{$flex}--spacer--column--base: var(--#{$pf-global}--spacer--lg); // default spacer/gap for columns
  --#{$flex}--spacer--row--base: var(--#{$pf-global}--spacer--sm); // default spacer/gap for rows
  --#{$flex}--RowGap: var(--#{$flex}--spacer--row--base); 
  --#{$flex}--ColumnGap: 0;
  --#{$flex}--m-gap--RowGap: var(--#{$flex}--spacer--row--base);
  --#{$flex}--m-gap--ColumnGap: var(--#{$flex}--spacer--column--base);
  --#{$flex}--m-row-gap--RowGap: var(--#{$flex}--spacer--row--base);
  --#{$flex}--m-column-gap--ColumnGap: var(--#{$flex}--spacer--column--base);

  // Emit spacer css variables that map to requested spacer values
  @include pf-v5-emit-properties($pf-v5-l-flex--variable-map);

  display: var(--#{$flex}--Display);
  flex-wrap: var(--#{$flex}--FlexWrap);
  gap: var(--#{$flex}--RowGap) var(--#{$flex}--ColumnGap);
  align-items: var(--#{$flex}--AlignItems);
}

// stylelint-disable no-duplicate-selectors, max-nesting-depth

// Item
.#{$flex} > * {
  // set/reset layout spacers on children, since the parent flex layout can be a child of another flex layout and needs these values from its parent
  --#{$flex}--spacer--column: var(--#{$flex}--spacer, var(--#{$flex}--spacer--column--base));
  --#{$flex}--spacer--row: var(--#{$flex}--spacer, var(--#{$flex}--spacer--row--base));

  order: var(--#{$flex}--item--Order);
  max-width: 100%;
  margin-right: var(--#{$flex}--spacer--column);

  // don't set base value for --#{$flex}--item--Order as it defaults to 0
  @media screen and (min-width: $pf-v5-global--breakpoint--sm) {
    order: var(--#{$flex}--item--Order-on-sm, var(--#{$flex}--item--Order));
  }

  @media screen and (min-width: $pf-v5-global--breakpoint--md) {
    order: var(--#{$flex}--item--Order-on-md, var(--#{$flex}--item--Order-on-sm, var(--#{$flex}--item--Order)));
  }

  @media screen and (min-width: $pf-v5-global--breakpoint--lg) {
    order: var(--#{$flex}--item--Order-on-lg, var(--#{$flex}--item--Order-on-md, var(--#{$flex}--item--Order-on-sm, var(--#{$flex}--item--Order))));
  }

  @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
    order: var(--#{$flex}--item--Order-on-xl, var(--#{$flex}--item--Order-on-lg, var(--#{$flex}--item--Order-on-md, var(--#{$flex}--item--Order-on-sm, var(--#{$flex}--item--Order)))));
  }

  @media screen and (min-width: $pf-v5-global--breakpoint--2xl) {
    order: var(--#{$flex}--item--Order-on-2xl, var(--#{$flex}--item--Order-on-xl, var(--#{$flex}--item--Order-on-lg, var(--#{$flex}--item--Order-on-md, var(--#{$flex}--item--Order-on-sm, var(--#{$flex}--item--Order))))));
  }

  &:last-child {
    --#{$flex}--spacer: 0;
  }
}
/* ... */

